# mcp-codegen

./: CHANGELOG.md  README.md  SANDBOXING.md  mypy.ini  pyproject.toml  pytest.ini
src/mcp_codegen/: __init__.py  cli.py  client.py  codegen.py  constants.py  exceptions.py  fs_layout.py  module.py  skill_generator.py  utils.py
src/mcp_codegen/runner/: __init__.py  firejail-mcp.profile  limits.py  logger.py  privacy.py  run.py  sandbox.py  workspace.py
src/mcp_codegen/runtime/: __init__.py  client.py  search.py
tests/: README.md  __init__.py  conftest.py  run_tests.sh  test_cli_integration.py  test_codegen_v2.py  test_exceptions.py  test_fs_layout.py  test_mcp_servers.py  test_readme_examples.py  test_runtime_integration.py  test_runtime_search.py  test_unit.py
