[project]
name = "mcp-codegen"
version = "0.1.4"
description = "Generate Python client code from MCP (Model Context Protocol) servers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Håkan Niska" }]
dependencies = [
  "mcp>=1.8.0",
  "pydantic>=2.7",
  "typing-extensions>=4.9",
  "anyio>=4.4",
  "httpx>=0.27.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.20"  # For proper HTTP mocking
]
dev = [
  "mypy>=1.0",
  "ruff>=0.1",
  "types-requests",
  "typing-extensions>=4.0"
]

[project.scripts]
mcp-codegen = "mcp_codegen.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
